Novos casos de usos
Signed-off-by: Pedro Marinho <pedro.marinho@creathus.org.br>